--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>IoT Plant Watering System</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../static/css/index.css">
 
     </head>
     <body>
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./images/giphy.gif" alt="logo" width="60" height="48" class="d-inline-block">
+                    <img src="../static/images/logo.gif" alt="logo" width="60" height="48" class="d-inline-block">
                     IoT Plant Watering System
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
                             <a class="nav-link active" aria-current="page" href="./index.html">Darshboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./historical/historical.html">Historical Data</a>
+                            <a class="nav-link" href="./historical.html">Historical Data</a>
                         </li>
                     </ul>
                 </div>
@@ -91,7 +91,7 @@
                 </div>
                 <!--Emoji-->
                 <div class="col-md-6 col-sm-6 sys">
-                    <img src="./images/emoji/cold.gif" width="200px" alt="emoji" id="emoji"/>
+                    <img src="../static/images/emoji/cold.gif" width="200px" alt="emoji" id="emoji"/>
                 </div>
             </div>
         </div>
@@ -115,6 +115,6 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
-        <script src="./index.js"></script>
+        <script src="../static/js/index.js"></script>
     </body>
 </html>  
