bulit inital flask fraemwork

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <!--photo display-->
                 <div class="col-md-6 col-sm-6 sys pt-5">
-                    <img src="./images/plant.jpeg" width="200px" alt="plant-photo" id="photo"/>
+                    <img src="../static/images/plant.jpeg" width="200px" alt="plant-photo" id="photo"/>
                 </div>
             </div>
         </div>
