--- a/app/templates/historical.html
+++ b/app/templates/historical.html
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{url_for('index')}}">Darshboard</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Darshboard</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./historical.html">Historical Data</a>
