--- a/app/templates/historical.html
+++ b/app/templates/historical.html
@@ -7,7 +7,7 @@
         <title>IoT Plant Watering System</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="stylesheet" href="../static/css/historical.css">
+        <link rel="stylesheet" href="{{ url_for('static',filename='css/historical.css') }}">
     </head>
     <body>
         <!-- Nav Bar -->
@@ -23,10 +23,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Darshboard</a>
+                            <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Darshboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./historical.html">Historical Data</a>
+                            <a class="nav-link" href="{{ url_for('historical') }}">Historical Data</a>
                         </li>
                     </ul>
                 </div>
