--- a/app/templates/historical.html
+++ b/app/templates/historical.html
@@ -1,42 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
-        <meta name="description" content="UWA CITS5506 project">
-        <title>IoT Plant Watering System</title>
+{% extends "base.html" %} 
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ url_for('static',filename='css/historical.css') }}">
-    </head>
-    <body>
-        <!-- Nav Bar -->
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="../static/images/logo.gif" alt="logo" width="60" height="48" class="d-inline-block">
-                    IoT Plant Watering System
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Darshboard</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('historical') }}">Historical Data</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+{% block script %}
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="{{ url_for('static', filename='js/historical.js') }}"></script>
+{% endblock %} 
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
-        <script src="https://d3js.org/d3.v7.min.js"></script>
-        <script src="../static/js/historical.js"></script>
-    </body>
-</html>
+{% block content %}
+<div class="container pt-5">
+    <div class="row">
+        <div class="col-md-2 col-sm-4 sys">
+            <h5>moisture data</h5>
+            <div id="moisdata"></div>
+        </div>
+{% endblock %}
+
+
+
   
