--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,120 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
-    <meta name="description" content="UWA CITS5506 project">
-    <title>IoT Plant Watering System</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static',filename='css/index.css') }}">
-
-    </head>
-    <body>
-        <!-- Nav Bar -->
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="../static/images/logo.gif" alt="logo" width="60" height="48" class="d-inline-block">
-                    IoT Plant Watering System
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Darshboard</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('historical') }}">Historical Data</a>
-                        </li>
-                    </ul>
+{% extends "base.html" %} 
+{% block script %}
+    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+{% endblock %}
+{% block content %}
+    <!-- Alarm Text -->
+    <div class="alarm" id="alarm" style="display:none;"></div>
+    <!-- Alert-->
+    <div id="wateringAlertPlaceholder"></div>
+    <!--Darshboard-->
+    <!-- Soil moisture -->
+    <div class="container pt-5">
+        <div class="row">
+            <div class="col-md-2 col-sm-4 sys">
+                <div id="mois"> Soil moisture </div>
+                <div class="pt-2"></div>
+                <div class="progress moisbar pt-3">
+                    <span class="progress-left">
+                        <span class="progress-bar"></span>
+                    </span>
+                    <span class="progress-right">
+                        <span class="progress-bar"></span>
+                    </span>
+                    <div class="progress-value" >
+                        <span id="mois-value"></span><span>%</span>
+                    </div>
                 </div>
             </div>
-        </nav>
-
-        <!-- Alarm Text -->
-        <div class="alarm" id="alarm" style="display:none;"></div>
-        <!-- Alert-->
-        <div id="wateringAlertPlaceholder"></div>
-        <!--Darshboard-->
-        <!-- Soil moisture -->
-        <div class="container pt-5">
-            <div class="row">
-                <div class="col-md-2 col-sm-4 sys">
-                    <div id="mois"> Soil moisture </div>
-                    <div class="pt-2"></div>
-                    <div class="progress moisbar pt-3">
-                        <span class="progress-left">
-                            <span class="progress-bar"></span>
-                        </span>
-                        <span class="progress-right">
-                            <span class="progress-bar"></span>
-                        </span>
-                        <div class="progress-value" >
-                            <span id="mois-value"></span><span>%</span>
-                        </div>
+            <!-- Temperature -->
+            <div class="col-md-2 col-sm-4 sys">
+                <div id="temp"> Temperature </div>
+                <div class="pt-2"></div>
+                <div class="progress tempbar pt-3">
+                    <span class="progress-left">
+                        <span class="progress-bar"></span>
+                    </span>
+                    <span class="progress-right">
+                        <span class="progress-bar"></span>
+                    </span>
+                    <div class="progress-value">
+                        <sapn id="temp-value"></sapn><span>°C</span>
                     </div>
                 </div>
-                <!-- Temperature -->
-                <div class="col-md-2 col-sm-4 sys">
-                    <div id="temp"> Temperature </div>
-                    <div class="pt-2"></div>
-                    <div class="progress tempbar pt-3">
-                        <span class="progress-left">
-                            <span class="progress-bar"></span>
-                        </span>
-                        <span class="progress-right">
-                            <span class="progress-bar"></span>
-                        </span>
-                        <div class="progress-value">
-                            <sapn id="temp-value"></sapn><span>°C</span>
-                        </div>
+            </div>
+            <!-- Light -->
+            <div class="col-md-2 col-sm-4 sys">
+                <div id="light"> Light </div>
+                <div class="pt-2"></div>
+                <div class="progress lightbar pt-3">
+                    <span class="progress-left">
+                        <span class="progress-bar"></span>
+                    </span>
+                    <span class="progress-right">
+                        <span class="progress-bar"></span>
+                    </span>
+                    <div class="progress-value">
+                        <sapn id="light-value"></sapn><span></span>
                     </div>
                 </div>
-                <!-- Light -->
-                <div class="col-md-2 col-sm-4 sys">
-                    <div id="light"> Light </div>
-                    <div class="pt-2"></div>
-                    <div class="progress lightbar pt-3">
-                        <span class="progress-left">
-                            <span class="progress-bar"></span>
-                        </span>
-                        <span class="progress-right">
-                            <span class="progress-bar"></span>
-                        </span>
-                        <div class="progress-value">
-                            <sapn id="light-value"></sapn><span></span>
-                        </div>
-                    </div>
-                </div>
-                <!--Emoji-->
-                <div class="col-md-6 col-sm-6 sys">
-                    <img src="../static/images/emoji/cold.gif" width="200px" alt="emoji" id="emoji"/>
-                </div>
+            </div>
+            <!--Emoji-->
+            <div class="col-md-6 col-sm-6 sys">
+                <img src="../static/images/emoji/cold.gif" width="200px" alt="emoji" id="emoji"/>
             </div>
         </div>
-        <!--Control board-->
-        <div class="container pt-5">
-            <div class="row">
-                <!--Watering btn-->
-                <div class="col-md-3 col-sm-6 sys pt-5">
-                    <button type="button" class="btn btn-primary" id="watering-btn">Watering your plant</button>
-                </div>
-                <!--Photo btn-->
-                <div class="col-md-3 col-sm-6 sys pt-5">
-                    <button type="button" class="btn btn-success" id="photo-btn">Take a photo</button>
-                </div>
-                <!--photo display-->
-                <div class="col-md-6 col-sm-6 sys pt-5">
-                    <img src="../static/images/plant.jpeg" width="200px" alt="plant-photo" id="photo"/>
-                </div>
+    </div>
+    <!--Control board-->
+    <div class="container pt-5">
+        <div class="row">
+            <!--Watering btn-->
+            <div class="col-md-3 col-sm-6 sys pt-5">
+                <button type="button" class="btn btn-primary" id="watering-btn">Watering your plant</button>
+            </div>
+            <!--Photo btn-->
+            <div class="col-md-3 col-sm-6 sys pt-5">
+                <button type="button" class="btn btn-success" id="photo-btn">Take a photo</button>
+            </div>
+            <!--photo display-->
+            <div class="col-md-6 col-sm-6 sys pt-5">
+                <img src="../static/images/plant.jpeg" width="200px" alt="plant-photo" id="photo"/>
             </div>
         </div>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
-        <script src="../static/js/index.js"></script>
-    </body>
-</html>  
+    </div>
+{% endblock %}
