--- a/app/templates/historical.html
+++ b/app/templates/historical.html
@@ -8,10 +8,45 @@
 {% block content %}
 <div class="container pt-5">
     <div class="row">
-        <div class="col-md-2 col-sm-4 sys">
-            <h5>moisture data</h5>
-            <div id="moisdata"></div>
+        <div class="col-md-6 col-sm-6 sys">
+            <h5>Moisture data</h5>
+            <div id="moisData"></div>
+            <h5>Temp data</h5>
+            <div id="tempData"></div>
+            <h5>Light data</h5>
+            <div id="lightData"></div>
         </div>
+        <div class="col-md-6 col-sm-6 sys">
+            <div>
+                <h5>Alert history</h5>
+                <table class="table table-warning">
+                    <thead>
+                      <tr>
+                        <th scope="col">Time</th>
+                        <th scope="col">Alarm message</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>2022 Sep 2 18:20:10</td>
+                        <td>Moisture lower than 20%</td>
+                      </tr>
+                      <tr>
+                        <td>2022 Sep 2 18:20:10</td>
+                        <td>Temperature is over 35 °C</td>
+                      </tr>
+                      <tr>
+                        <td>2022 Sep 2 18:20:10</td>
+                        <td>Light is lower than 5</td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
 
 
