set up advance setting page & put input box and btn

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('historical') }}">Historical Data</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('advance') }}">Advance Setting</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -40,7 +43,7 @@
         {% block content %} {% endblock %}
 
         <!-- Footer -->
-        <footer>
+        <footer class="pt-5">
             <div>
                 <ul>
                     <li style="list-style-type: none">© Copyright</li>
