--- a/app/templates/advance.html
+++ b/app/templates/advance.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} 
-
+{% block script %}
+<script src="{{ url_for('static', filename='js/advance.js') }}"></script>
+{% endblock %} 
 {% block content %}
 <div class="container pt-5">
     <div class="row">
@@ -49,10 +51,10 @@
         <div class="container pt-5">
             <div class="row">
                 <div class="col-md-6 sys">
-                    <button type="button" class="btn btn-success" id="photo-btn">Update Seeting</button>
+                    <button type="button" class="btn btn-success" id="update-btn">Update Seeting</button>
                 </div>
                 <div class="col-md-6 sys">
-                    <button type="button" class="btn btn-success" id="photo-btn">Reset to defaults</button>
+                    <button type="button" class="btn btn-info" id="rest-btn">Reset to defaults</button>
                 </div>
                 
             </div>
