add data checking function in advance page

--- a/app/templates/advance.html
+++ b/app/templates/advance.html
@@ -3,6 +3,8 @@
 <script src="{{ url_for('static', filename='js/advance.js') }}"></script>
 {% endblock %} 
 {% block content %}
+<!-- Alert-->
+<div id="dataAlertPlaceholder"></div>
 <div class="container pt-5">
     <div class="row">
         <div class="col-md-3 col-sm-6">
