--- a/app/templates/advance.html
+++ b/app/templates/advance.html
@@ -10,36 +10,36 @@
         <div class="col-md-3 col-sm-6">
             <h5> Soild moisture range(%) </h5>
             <form class="form-floating">
-                <input type="number" class="form-control" id="moisMax" placeholder="70" value="70" step="5">
+                <input type="number" class="form-control" id="moisMax" placeholder="70" value="70" step="5" min="30" max="80">
                 <label for="moisMax">Max</label>
             </form>
             <div class="pt-2"></div>
             <form class="form-floating">
-                <input type="number" class="form-control" id="moisMin" placeholder="30" value="30" step="5">
+                <input type="number" class="form-control" id="moisMin" placeholder="30" value="30" step="5" min="10" max="50">
                 <label for="moisMin">Min</label>
             </form>
         </div>
         <div class="col-md-3 col-sm-6">
             <h5> Temperature range (°C) </h5>
             <form class="form-floating">
-                <input type="number" class="form-control" id="tempMax" placeholder="30" value="30" step="5">
+                <input type="number" class="form-control" id="tempMax" placeholder="30" value="30" step="5" min="10" max="45">
                 <label for="tempMax">Max</label>
             </form>
             <div class="pt-2"></div>
             <form class="form-floating">
-                <input type="number" class="form-control" id="tempMin" placeholder="5" value="5" step="5">
+                <input type="number" class="form-control" id="tempMin" placeholder="5" value="5" step="5" min="-10" max="20">
                 <label for="tempMin">Min</label>
             </form>
         </div>
         <div class="col-md-3 col-sm-6">
             <h5> Ligth range </h5>
             <form class="form-floating">
-                <input type="number" class="form-control" id="lightMax" placeholder="50" value="50" step="1">
+                <input type="number" class="form-control" id="lightMax" placeholder="5" value="5" step="1" min="5" max="10">
                 <label for="lightMax">Max</label>
             </form>
             <div class="pt-2"></div>
             <form class="form-floating">
-                <input type="number" class="form-control" id="lightMin" placeholder="5" value="5" step="1">
+                <input type="number" class="form-control" id="lightMin" placeholder="2" value="2" step="1" min="1" max="6">
                 <label for="lightMin">Min</label>
             </form>
         </div>
@@ -47,7 +47,7 @@
             <h5> Once watering time (mins)</h5>
             <form class="form-floating">
                 <input type="number" class="form-control" id="wateringTime" placeholder="2" value="2" step="1">
-                <label for="lightMax"></label>
+                <label for="lightMax">Watering Time</label>
             </form>
         </div>
         <div class="container pt-5">
@@ -56,7 +56,7 @@
                     <button type="button" class="btn btn-success" id="update-btn">Update Seeting</button>
                 </div>
                 <div class="col-md-6 sys">
-                    <button type="button" class="btn btn-info" id="rest-btn">Reset to defaults</button>
+                    <button type="button" class="btn btn-info" id="reset-btn">Reset to defaults</button>
                 </div>
                 
             </div>
