--- a/app/templates/advance.html
+++ b/app/templates/advance.html
@@ -13,7 +13,14 @@
 <script src="{{ url_for('static', filename='js/advance.js') }}"></script>
 {% endblock %} 
 {% block content %}
-
+{% for message in get_flashed_messages() %}
+<div class="container">
+    <div class="alert alert-warning">
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>'
+        {{ message }} 
+    </div> 
+<div>
+{% endfor %}
 <!-- Alert-->
 <div id="dataAlertPlaceholder"></div>
 <div class="container pt-5">
