--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Darshboard</a>
+                            <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Dashboard</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('historical') }}">Historical Data</a>
