--- a/app/templates/advance.html
+++ b/app/templates/advance.html
@@ -64,7 +64,7 @@
         <div class="container pt-5">
             <div class="row">
                 <div class="col-md-6 sys">
-                    <button type="button" class="btn btn-success" id="update-btn">Update Seeting</button>
+                    <button type="button" class="btn btn-success" id="update-btn">Update Setting</button>
                 </div>
                 <div class="col-md-6 sys">
                     <button type="button" class="btn btn-info" id="reset-btn">Reset to defaults</button>
