--- a/app/templates/advance.html
+++ b/app/templates/advance.html
@@ -13,16 +13,9 @@
 <script src="{{ url_for('static', filename='js/advance.js') }}"></script>
 {% endblock %} 
 {% block content %}
-{% for message in get_flashed_messages() %}
-<div class="container">
-    <div class="alert alert-warning">
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>'
-        {{ message }} 
-    </div> 
-<div>
-{% endfor %}
 <!-- Alert-->
 <div id="dataAlertPlaceholder"></div>
+<div id="dataUpdated"></div>
 <div class="container pt-5">
     <div class="row">
         <div class="col-md-3 col-sm-6">
@@ -76,7 +69,6 @@
                 <div class="col-md-6 sys">
                     <button type="button" class="btn btn-info" id="reset-btn">Reset to defaults</button>
                 </div>
-                
             </div>
         </div>
     </div>
