add water level & update time features

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -6,8 +6,8 @@ body{
     background-color: skyblue;
 }
 .sys{
-    text-align: center;
-    align-self:center
+    text-align:center;
+    align-self:center;
 }
 .alarm{
     color: black;
