Show latest image on webpage

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -86,7 +86,7 @@
         <div class="row">
             <!--Watering btn-->
             <div class="col-md-4 col-sm-6 sys pt-5">
-                <button type="button" class="btn btn-primary" id="watering-btn">Watering your plant</button>
+                <button type="button" class="btn btn-primary" id="watering-btn">Water your plant now</button>
             </div>
             <!--Photo btn-->
             <div class="col-md-4 col-sm-6 sys pt-5">
@@ -94,7 +94,7 @@
             </div>
             <!--photo display-->
             <div class="col-md-4 col-sm-6 sys pt-5">
-                <img src="../static/images/plant.jpeg" width="200px" alt="plant-photo" id="photo"/>
+                <img src="" width="200px" alt="plant-photo" id="photo"/>
             </div>
         </div>
     </div>
