--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,13 +27,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Dashboard</a>
+                            <a class="nav-link {{ 'active' if request.path == url_for('index') or request.path =='/'}}" aria-current="page" href="{{ url_for('index') }}">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('historical') }}">Historical Data</a>
+                            <a class="nav-link {{ 'active' if request.path == url_for('historical') }}" href="{{ url_for('historical') }}">Historical Data</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('advance') }}">Advance Setting</a>
+                            <a class="nav-link {{ 'active' if request.path == url_for('advance') }}" href="{{ url_for('advance') }}">Advance Setting</a>
                         </li>
                     </ul>
                 </div>
