UI: amended the UI to adjust for different screen index-elements padding & historical-width of data & advance-padding

--- a/app/templates/advance.html
+++ b/app/templates/advance.html
@@ -67,12 +67,12 @@
                 <label for="pictureFrequency">Picture Frequency (hr)</label>
             </form>
         </div>
-        <div class="container pt-5">
+        <div class="container pt-2">
             <div class="row">
-                <div class="col-md-6 sys">
+                <div class="col-md-6 sys pt-3">
                     <button type="button" class="btn btn-success" id="update-btn">Update Setting</button>
                 </div>
-                <div class="col-md-6 sys">
+                <div class="col-md-6 sys pt-3">
                     <button type="button" class="btn btn-info" id="reset-btn">Reset to defaults</button>
                 </div>
             </div>
