--- a/app/templates/historical.html
+++ b/app/templates/historical.html
@@ -12,18 +12,19 @@
 {% endblock %} 
 
 {% block content %}
-<div class="container pt-5">
+<div class="container pt-3">
     <div class="row">
-        <div class="col-md-6 col-sm-6 sys">
+        <div class="col-md-8 col-sm-8 sys">
             <h5>Moisture data</h5>
             <div id="moisData"></div>
-            <h5>Temp data</h5>
+            <h5 class="pt-3">Temp data</h5>
             <div id="tempData"></div>
-            <h5>Light data</h5>
+            <h5 class="pt-3">Light data</h5>
             <div id="lightData"></div>
         </div>
-        <div class="col-md-6 col-sm-6 sys">
+        <div class="col-md-4 col-sm-4 sys">
             <div>
+              <div class="pt-3">
                 <h5>Alert history</h5>
                 <table class="table table-warning">
                     <thead>
