--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,10 +20,10 @@
     <div id="wateringAlertPlaceholder"></div>
     <!--Darshboard-->
     <!-- Soil moisture -->
-    <div class="container pt-5">
+    <div class="container pt-3">
         <div class="row">
             <div class="col-md-2 col-sm-4 sys">
-                <div id="mois"> Soil moisture </div>
+                <div class="pt-2" id="mois"> Soil moisture </div>
                 <div class="pt-2"></div>
                 <div class="progress moisbar pt-3">
                     <span class="progress-left">
@@ -39,7 +39,7 @@
             </div>
             <!-- Temperature -->
             <div class="col-md-2 col-sm-4 sys">
-                <div id="temp"> Temperature </div>
+                <div class="pt-2" id="temp"> Temperature </div>
                 <div class="pt-2"></div>
                 <div class="progress tempbar pt-3">
                     <span class="progress-left">
@@ -55,7 +55,7 @@
             </div>
             <!-- Light -->
             <div class="col-md-2 col-sm-4 sys">
-                <div id="light"> Light </div>
+                <div class="pt-2" id="light"> Light </div>
                 <div class="pt-2"></div>
                 <div class="progress lightbar pt-3">
                     <span class="progress-left">
@@ -71,20 +71,20 @@
             </div>
             <!-- Water Level -->
             <div class="col-md-2 col-sm-4 sys">
-                <div id="light"> Water level </div>
+                <div class="pt-2" id="light"> Water level </div>
                 <div class="pt-2"></div>
                 <img src="../static/images/waterlevel/full.png" width="160px" alt="waterlevel" id="waterLevel"/>
             </div>
             <!--Emoji-->
             <div class="col-md-4 col-sm-4 sys">
-                <div id="light"> Status </div>
+                <div class="pt-2" id="light"> Status </div>
                 <div class="pt-2"></div>
                 <img src="../static/images/emoji/cold.gif" width="150px" alt="emoji" id="emoji"/>
             </div>
         </div>
     </div>
     <!--Control board-->
-    <div class="container pt-5">
+    <div class="container pt-3">
         <div class="row">
             <!--Watering btn-->
             <div class="col-md-4 col-sm-6 sys pt-5">
