Advance:amend the title of columns

--- a/app/templates/advance.html
+++ b/app/templates/advance.html
@@ -19,7 +19,7 @@
 <div class="container pt-5">
     <div class="row">
         <div class="col-md-3 col-sm-6">
-            <h5> Soild moisture range(%) </h5>
+            <h5> Soil moisture range(%) </h5>
             <form class="form-floating">
                 <input type="number" class="form-control" id="moisMax" step="5" min="30" max="80">
                 <label for="moisMax">Max</label>
@@ -43,7 +43,7 @@
             </form>
         </div>
         <div class="col-md-3 col-sm-6">
-            <h5> Light range </h5>
+            <h5> Light range (Lux)</h5>
             <form class="form-floating">
                 <input type="number" class="form-control" id="lightMax" step="1" min="5" max="10">
                 <label for="lightMax">Max</label>
