Added real water level to UI

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,7 @@
     var temperature = {{ data.temperature }}
     var sensLight = {{ data.light }}
     var lastUpdated = {{ data.updateTime }}
+    var waterLevelvalue = {{data.waterLevel}}
   </script>
 
 <script src="{{ url_for('static', filename='js/index.js') }}"></script>
