Fixed graph width on small screens

--- a/app/templates/historical.html
+++ b/app/templates/historical.html
@@ -19,7 +19,7 @@
             <div id="moisData"></div>
             <h5 class="pt-3">Temp data</h5>
             <div id="tempData"></div>
-            <h5 class="pt-3">Light data</h5>
+            <h5 class="pt-3">Light data (Lux/100)</h5>
             <div id="lightData"></div>
         </div>
         <div class="col-md-4 col-sm-4 sys">
