--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,7 +42,7 @@
 
         {% block content %} {% endblock %}
         <!-- Footer -->
-        <footer class="pt-5">
+        <footer>
             <div>
                 <ul>
                     <li style="list-style-type: none">© Copyright</li>
